position in CSS

--- a/type_of_selectors.html
+++ b/type_of_selectors.html
@@ -55,7 +55,7 @@
 <body>
     <h1 class="back">this is class selector</h1>
     <p class="back">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, tempore.</p>
-    <!-- <p> tag not apply or take the class back selectors because i give restricted to any tag except <h1> tag  -->
+    <!-- <p> tag not apply or take the class back selectors because i give restricted to all tag except <h1> tag  -->
     <p class="back">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, tempore.</p>
     <!-- we can use multiply class selectors in single element-->
     <h1 class="font">this is used multi class selectors</h1> 
